--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.20",
+		"bootstrap-icons": "^1.11.3",
+		"dayjs": "^1.11.13",
 		"toml": "^3.0.0"
 	}
 }
