--- a/src/lib/server/content/events/01_test.toml
+++ b/src/lib/server/content/events/01_test.toml
@@ -2,9 +2,9 @@ title = "Test Event"
 date = "2024-04-27T19:00:00+02:00"
 description = """
 Hi"""
-is_public = false
-is_mandatory = true
-show_resources = false
+isPublic = false
+isMandatory = true
+showResources = false
 forms = []
 resources = []
 
