--- a/src/lib/server/content/events/01_kick_off.toml
+++ b/src/lib/server/content/events/01_kick_off.toml
@@ -1,5 +1,5 @@
 title = "Semester Kick-Off Winterterm 23/24"
-date = "2024-04-27T19:00:00+02:00"
+date = 2025-04-27T19:00:00Z
 description = """
 This is where your Digital Shaper Journey will start. We'll give you a summary on all you need to know to master your track.
 Our topics include:
@@ -9,11 +9,9 @@ Our topics include:
 3. **Track Get-Together** – you'll meet other participants in the track you're planning to choose, and can ask the Track Leads for more information
 
 Our goal is for everybody to have a clear understanding about TechLabs Dortmund and your Journey!"""
+type = "event"
 isPublic = false
 isMandatory = true
-showResources = false
-forms = []
-resources = []
 
 [location]
 name = "KoFabrik in Bochum"
