--- a/src/lib/server/content/events/02_test.toml
+++ b/src/lib/server/content/events/02_test.toml
@@ -1,12 +1,10 @@
-title = "Test Event"
-date = "2024-04-27T19:00:00+02:00"
+title = "Test"
+date = 2025-04-28T19:00:00Z
 description = """
 Hi"""
+type = "event"
 isPublic = false
 isMandatory = true
-showResources = false
-forms = []
-resources = []
 
 [location]
 name = "KoFabrik in Bochum"
