--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
+		"ics": "^3.8.1",
 		"markdown-it": "^14.1.0",
 		"toml": "^3.0.0"
 	}
