--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.7.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -36,8 +37,10 @@
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
+		"dotenv": "^16.4.5",
 		"ics": "^3.8.1",
 		"markdown-it": "^14.1.0",
+		"postgres": "^3.4.4",
 		"toml": "^3.0.0"
 	}
 }
