--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.8",
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
