--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.8",
 		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -37,7 +38,7 @@
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
-		"dotenv": "^16.4.5",
+		"env-var": "^7.5.0",
 		"ics": "^3.8.1",
 		"markdown-it": "^14.1.0",
 		"postgres": "^3.4.4",
