--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.8",
 		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.7.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -36,8 +38,10 @@
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
+		"env-var": "^7.5.0",
 		"ics": "^3.8.1",
 		"markdown-it": "^14.1.0",
+		"postgres": "^3.4.4",
 		"toml": "^3.0.0"
 	}
 }
