--- a/compose.yml
+++ b/compose.yml
@@ -8,9 +8,22 @@ services:
       POSTGRES_PASSWORD: radar123
       POSTGRES_DB: radar
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
+  radar:
+    build: .
+    ports:
+      - '3001:3000'
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: radar
+      DB_USER: radar
+      DB_PASSWORD: radar123
+    depends_on:
+      - postgres
 
 volumes:
   postgres-data:
