--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "newradar",
-  "version": "0.4.0",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@fontsource/fira-mono": "^5.0.0",
-    "@neoconfetti/svelte": "^2.0.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-node": "^5.2.8",
-    "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^9.6.0",
-    "@types/markdown-it": "^14.1.2",
-    "@types/node": "^22.7.5",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "bootstrap-icons": "^1.11.3",
-    "dayjs": "^1.11.13",
-    "env-var": "^7.5.0",
-    "ics": "^3.8.1",
-    "markdown-it": "^14.1.0",
-    "postgres": "^3.4.4",
-    "toml": "^3.0.0"
-  }
+	"name": "newradar",
+	"version": "0.4.0",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint .",
+		"format": "prettier --check .",
+		"format:write": "prettier --write ."
+	},
+	"devDependencies": {
+		"@fontsource/fira-mono": "^5.0.0",
+		"@neoconfetti/svelte": "^2.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.8",
+		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^9.6.0",
+		"@types/markdown-it": "^14.1.2",
+		"@types/node": "^22.7.5",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"autoprefixer": "^10.4.20",
+		"bootstrap-icons": "^1.11.3",
+		"dayjs": "^1.11.13",
+		"env-var": "^7.5.0",
+		"ics": "^3.8.1",
+		"markdown-it": "^14.1.0",
+		"postgres": "^3.4.4",
+		"toml": "^3.0.0"
+	}
 }
