--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/dompurify": "^3.0.5",
 		"@types/eslint": "^9.6.0",
 		"@types/markdown-it": "^14.1.2",
 		"@types/node": "^22.7.5",
@@ -41,6 +42,7 @@
 		"autoprefixer": "^10.4.20",
 		"bootstrap-icons": "^1.11.3",
 		"dayjs": "^1.11.13",
+		"dompurify": "^3.1.7",
 		"env-var": "^7.5.0",
 		"ics": "^3.8.1",
 		"markdown-it": "^14.1.0",
